@@ -1,5 +1,7 @@
 NOCC 1.0.0    ?? ??, 2006
 
+    * Doesn't display link to contacts list if $conf->prefs_dir is empty (Arnaud
+      Boudou).
     * Fix Javascript issues (Arnaud Boudou).
     * Updated german translation (strongbows, patch #1353859).
     * Render images embedded within HTML emails (Arnaud Boudou, patch #501449).
